--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -1,4 +1,6 @@
-html, body {
+@import 'bulma/bulma';
+
+/* html, body {
 	height: 100%;
 	width: 100%;
 	padding: 0;
@@ -17,4 +19,4 @@ html, body {
 
 #app {
 	height: 100%;
-}
+} */
